# eduai-friction

./: README.md  pyproject.toml
eduai_friction/: __init__.py  main.py  prompts.py
