[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduai-friction"
version = "2025.12.21185626"
description = "eduai-friction is a package promoting informed discussions around AI in education by analyzing 'Four Frictions' and providing actionable steps."
readme = "README.md"
authors = [{ name = "eduai-friction", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/eduai-friction"
